user_group_settings: Fix the alignment of remove button.

--- a/web/styles/settings.css
+++ b/web/styles/settings.css
@@ -1774,6 +1774,10 @@ label.preferences-radio-choice-label {
         display: none;
     }
 
+    .empty-email-col-for-user-group {
+        display: none;
+    }
+
     .upload-size {
         display: none;
     }
